src/client/styles/styles.less
// THEME
@brand-border: #3E2723;
@course-menu-font: #4E342E;

.browsehappy {
  margin: 0.2em 0;
  background: #ccc;
  color: #000;
  padding: 0.2em 0;
}

body {
  padding: 0;
}

.ace_editor {
    min-height: 200px;
}

.thumbnail {
  width: 40px;
  height: 40px;
  margin-top: 8px;
  margin-bottom: 8px;
  margin-right: 16px;
  border-radius: 50%;
  box-sizing: content-box;
}

.qb-fixed {
    position: fixed;
    bottom: 20px;
    right: 20px;
}

.qb-brand {
    padding-right: 10px;
    margin-right: 11px;
    border-right: solid 1px @brand-border;
}

.qb-course-menu {
    padding: 0px;
    color: @course-menu-font;
    margin-top: 17px !important;
}

.qb-grid-list {
    & .qb-grey {
        background: #f5f5f5;
    }

    & .qb-green {
        background: #b9f6ca;
    }

    & .qb-yellow {
        background: #ffff8d;
    }

    & .qb-blue {
        background: #84ffff;
    }

    & .qb-purple {
        background: #ff8a80;
    }
}

.qb-arrow {
    position: absolute;
    &-prev {
        left: 10px;
    }
    &-next {
        right: 10px;
    }
}

.qb-card {
    min-height: 300px;
    &-front {
        background: #b9f6ca;
    }
    &-back {
        background: #ffff8d;
    }
    &-content {
        cursor: pointer;
        &:focus {
            outline: none;
        }
    }
}

.qb-preview {
    border: solid 1px @brand-border;
    padding: 0px 5px;
}

.qb-sidenav {
    padding-top: 0px;
}

.qb-list-item {
    > button:hover {
        background-color: #f5f5f5 !important;
    }

    &:first-child > button {
        border-radius: 0px;
        border-right: solid 1px #e1e1e1;

        & md-icon, p {
            color: #795548;
        }
    }
}

.qb-subheader {
    text-transform: uppercase;
}

.qb-module-card {
    margin: 45px 35px;

    & md-card-content {
        padding: 0px;
    }

    & md-input-container {
        padding-bottom: 0px;
    }

    & md-icon {
        color: rgba(239, 108, 0, 1) !important;
    }

    & input {
        border-bottom: none;
        color: rgba(121, 85, 72, 1);
    }

    & input::placeholder {
        color: rgba(121, 85, 72, 0.42);
    }
}

.qb-list {
    padding-top: 0px;
}

